--- a/dojodachi/Views/dojo/dead.cshtml
+++ b/dojodachi/Views/dojo/dead.cshtml
@@ -8,7 +8,7 @@
 <body>
     <h1>Oh NO!</h1>
     <h1>Your Poke is dead!</h1>
-    <h1>PLay Again?</h1>
+    <h1>Play Again?</h1>
     <a href="/">Play Again</a>
 </body>
 </html>
